@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST django-registration-0.8.tar.gz 284427 SHA256 a9062db28a2f06cb710a07444141d9ec1c499b08502f244f27a002f3e7230f0b SHA512 164508908da937c4f8aacdc5ffdd190b19a4da0174bd92f248b7db80d161fb9cd9beb20c62c7e213b0e060c17306036cf11ffc4e53c071b372ab8c721ca671ac WHIRLPOOL 287a72457e34f3063d09afa61edcc82809cf0690bc16aa81782fa42a228e364c7afd7666991e532b6a00bb6772bb3e6797a576a0495f6bd15431e9578c2b509f
+DIST master.zip 137362 SHA256 d2aeb46a0fb5b0e5fe3c77200682a34b96833cbe465c1b8edacf890895d3ca2a SHA512 2987bb8131509d655de8f8373aff7365b89b80edbc67e97d7c37dcc22a4e42f4bc1eb57ba9a8f681c72b514b16a302045147e06d80f4bd1f94b0846c88b77053 WHIRLPOOL f653f367644f627e8f6c66e80edd0dae040b5c785ce83dc639d5c65839fad7b6c32be3336e97cd60255f14a70114c471cd059ea1ee0fc6302ab91e7dbfae722e
 EBUILD django-registration-0.8-r1.ebuild 1120 SHA256 118767c792d1f777a7429234e4c2bd9269799e624bb33904e3032bb5e677e288 SHA512 db1b223a9087d8a1d1943c36dedf51117ba77f6a84fd642636536aa7f5f296cf9557b829405489525b5b3924f50cd87de4c09164434423c1d008c332207bfb3a WHIRLPOOL 067175088a19d263adf14ef02dd33dcb103e3fa021674d442b492dbc498870f13190c5d6433b080c4dd644b4f80d62d36f0cc756da60d4bf0215e5768272185c
-MISC ChangeLog 1063 SHA256 7505c1f63301807e0250d04082646ad50cfba67160ef783c01987e1725550844 SHA512 1ff3696dd044b0cf0137d6edae627d06a24903af53ac7d1a2338a66d20e623a6a066e0998bbae563fe00d60a7938a18060dc2c1870a2571e521df00e706a5b76 WHIRLPOOL d0a4bc59a75b8a593353c2035d937474d248ecff0bbf631ea8cd49b52404c2a08241d9901330a09e5ff4360d00935a392e62e7858d7320340714c11f8b0cc59d
+EBUILD django-registration-0.8-r2.ebuild 2073 SHA256 c0023430954e371a62f1f35f3e0b08487f63c358451da81979758e26801b1a9d SHA512 9edc8adc18084eb3a013635cb4997ec62a450dd028e359c8eeb4f7d491ca305fe3e330fcf42804fbd53af75a479c8d1142869ad73eaa27e7fc8ebd76b5668359 WHIRLPOOL aaad46c10e3e44a56c46b7140ecd85d10c403eddfe3d5992fa50a2fa536b5e4f075f06d5206256395e9af9fc3ccbaf272894a4a18fa4e1735cba744d04318cd8
+MISC ChangeLog 1272 SHA256 3460d6d507ed8d6837df691e5a8b5f0a2f673f30159a0837b71e0c1542837ec6 SHA512 083a692c1b52311546aec83179a1a9df131b98389c9625d1cc43cd8298356fc98b0598c04b5a874253dbba4b1cbef830723c3e54c7e4d1bc1f01be47a8f52b7b WHIRLPOOL edecbead227d554bfe4e70d17a3aa374fea7d1235f82bc901beb6316f8bae810376a7813aeb196a7f14fe69191a9c2a42741fbcfa844b3d5af174bcf7015f386
 MISC metadata.xml 353 SHA256 b643dbdcb08f41c9375929dde3178990d35e7b632c706837b3abe2942b5457df SHA512 4a886d36cd9d209f047e1e2f7dbb6e948059edc1cdcdaabf41540b2eea56d512e078b50aad0ee807e79554c6f8a69ab161e117305d9220a966333a2abfac718c WHIRLPOOL 230c4a85dc1d794def76c67848a481a45ac11ad43c45766b08b9ca5964198ca40912dcc81bbe49f97f0412c3cff644a69f0a4392d20c505817191eadff2a832d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlGjbXYACgkQso7CE7gHKw0lcgCgrMpKNXT1mx7OILz/7KbjLupd
-NsEAoNy/DhE5t0QWTlIUv/8opDQvA4pX
-=O/U6
+iEYEAREIAAYFAlGp9UQACgkQso7CE7gHKw2ofgCgpYJ6bti3G/7NJxFrgZFDYrOo
+qNcAnj6YvSl0V/WdXhFfqYOkfUf2oCM0
+=XTmR
 -----END PGP SIGNATURE-----
